# pubmed-notifier

./: Cargo.toml  Changes.md  README.org
.github/workflows/: rust.yml
debian/: rssnotify.service
src/: channelwrapper.rs  commands.rs  config.rs  datastructs.rs  db.rs  formatter.rs  lib.rs  main.rs  preset.rs  rsshandler.rs  senders.rs
test/: channel_AJR.json  channel_abdominal_radiology.json  channel_radiology.json  rssnotify.toml
