[package]
name = "rssnotify"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
rss = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
fast_html2md = "0.0.44"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
teloxide_tests = "0.2.0"
futures = "0.3.31"
chrono = {version = "0.4.39", features = ["clock"]}
redis = { version = "*", features = ["tokio-comp"] }
rusqlite = { version = "*", features = ["backup"]}
tokio-rusqlite = "0.6.0"