[package]
name = "rssnotify"
version = "0.1.0"
edition = "2024"
description = "Fetcher and sender through telegram of pubmed RSS feeds."
license = "MIT OR Apache-2.0" # Whatever
# , readme, and homepage

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = "debuginfo"        # Strip symbols from binary*

[dependencies]
rss = {version = "2.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10" }
serde_json = "1.0"
serde = {version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
fast_html2md = "0.0.48"
teloxide = { version = "0.15", features = ["macros"] }
log = "0.4"
futures = "0.3.31"
chrono = {version = "0.4.39", features = ["clock"]}
# redis = { version = "*", features = ["tokio-comp"] }
rusqlite = { version = "*", features = ["backup", "serde_json"]}
tokio-rusqlite = "0.6.0"
toml = "0.8.20"
simple-expand-tilde = "0.5.0"
log4rs = "1.3.0"
strum = "0.27"
strum_macros = "0.27"
tokio-cron-scheduler = "0.13.0"

[package.metadata.deb]
maintainer = "C Vanmarcke"
copyright = "2025, C Vanmarcke"
extended-description = """\
A CLI based tool to get pubmed based RSS feeds and send them through telegram."""
depends = "libc6 (>= 2.29), libsqlite3-0 (>= 3.5.9), libssl1.1 (>= 1.1.1) | libssl3t64 (>= 3.0.0), systemd"
section = "utility"
priority = "optional"
assets = [
    # both syntaxes are equivalent:
    ["target/release/rssnotify", "usr/bin/", "755"],
    # ["debian/rssnotify.service", "/lib/systemd/system/rssnotify.service", "644"], 
    # { source = "README.md", dest = "usr/share/doc/cargo-deb/README", mode = "644"},
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
